--- a/responsive_web_version/empty-example/index.html
+++ b/responsive_web_version/empty-example/index.html
@@ -11,6 +11,7 @@
       margin: 0;
     }
   </style>
+  <script src="dat.gui.min.js"></script>
   <script src="p5.js"></script>
   <script src="p5.dom.js"></script>
   <script src="p5.sound.js"></script>
