Enables SVG export

--- a/web-demo/index.html
+++ b/web-demo/index.html
@@ -1,24 +1,14 @@
-<!DOCTYPE html>
-<html lang="">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Face Generator (Web Version)</title>
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-    }
-  </style>
+<!DOCTYPE html><html><head>
   <script src="./addons/dat.gui.min.js"></script>
-  <script src="./addons/p5.min.js"></script>
-  <script src="./addons/p5.dom.min.js"></script>
-  <script src="sketch.js"></script>
-</head>
+    <script src="./addons/p5.min.js"></script>
+   <script src="./addons/p5.svg.js"></script>
+    <script src="./addons/p5.dom.min.js"></script>
+    <script src="./addons/p5.sound.min.js"></script>
+    <meta charset="utf-8">
 
-<body>
+  </head>
+  <body>
+    <script src="sketch.js"></script>
+  
 
-</body>
-
-</html>
+</body></html>
