--- a/web-demo/index.html
+++ b/web-demo/index.html
@@ -12,7 +12,8 @@
 </head>
 
 <body id="body">
-<h1 style="text-align: left;width: 40%; font-size: 20px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 1.5em; font-weight: lighter; position: absolute; top: 50px; left: 50px;">Refresh to generate a random face. Press 's' to save the face to SVG.</h1>
+  Refresh to randomize. Press 'S' to save to SVG.
+<!-- <h1 style="text-align: left;width: 40%; font-size: 20px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 1.5em; font-weight: lighter; position: absolute; top: 50px; left: 50px;">Refresh to generate a random face. Press 's' to save the face to SVG.</h1> -->
 
 
 </body>
