Fix path to canvas.js?

--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>People of the World</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="styles.css">
-    <script src="classes.js"></script>
-
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./styles.css">
+    <script src="./classes.js"></script>
 </head>
 
 <body>
@@ -162,7 +161,7 @@
             </div>
         </div>
     </div>
-    <script src="../canvas.js"></script>
+    <script src="./canvas.js"></script>
 </body>
 
 </html>
