--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <canvas id="canvas"></canvas>
     <div class="container ui">
         <!-- Tabs navs -->
-        <ul class="nav nav-tabs nav-fill mb-3 fixed-top navbar" id="ex1" role="tablist">
+        <ul class="nav nav-tabs nav-fill fixed-top navbar" id="ex1" role="tablist">
             <li class="nav-item" role="presentation">
-                <a class="nav-link active" id="ex1-tab-1" data-mdb-toggle="tab" href="#ex1-tabs-1" role="tab"
+                <a class="nav-link active tl" id="ex1-tab-1" data-mdb-toggle="tab" href="#ex1-tabs-1" role="tab"
                     aria-controls="ex1-tabs-1" aria-selected="true">
                     <img class="icon" src="icons/head-shape.svg"></a>
             </li>
@@ -41,7 +41,7 @@
                     <img class="icon" src="icons/facial-features.svg"></a>
             </li>
             <li class="nav-item" role="presentation">
-                <a class="nav-link" id="ex1-tab-4" data-mdb-toggle="tab" href="#ex1-tabs-4" role="tab"
+                <a class="nav-link tr" id="ex1-tab-4" data-mdb-toggle="tab" href="#ex1-tabs-4" role="tab"
                     aria-controls="ex1-tabs-4" aria-selected="false">
                     <img class="icon" src="icons/color-palette.svg"></a>
             </li>
@@ -58,7 +58,7 @@
                         <img class="icon" src="icons/head-shape/forehead-width-max.svg">
                     </div>
                     <div class="range">
-                        <input type="range" min="0" max="500" class="form-range" id="forehead-width-slider" />
+                        <input class="bar" type="range" min="0" max="500" value="200" class="form-range" id="forehead-width-slider" />
                     </div>
                 </div>
 
@@ -68,7 +68,7 @@
                         <img class="icon" src="icons/head-shape/cheeks-width-max.svg">
                     </div>
                     <div class="range">
-                        <input type="range" min="0" max="500" class="form-range" id="cheeks-width-slider" />
+                        <input type="range" class="bar" min="0" max="500" value="500" class="form-range" id="cheeks-width-slider" />
                     </div>
                 </div>
 
@@ -78,7 +78,7 @@
                         <img class="icon" src="icons/head-shape/chin-height-max.svg">
                     </div>
                     <div class="range">
-                        <input type="range" min="0" max="500" class="form-range" id="chin-height-slider" />
+                        <input type="range" class="bar" min="0" max="500" value="450" class="form-range" id="chin-height-slider" />
                     </div>
                 </div>
             </div>
