--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <canvas id="canvas"></canvas>
     <div class="container ui">
         <!-- Tabs navs -->
-        <ul class="nav nav-tabs nav-justified fixed-top mb-0 navbar" id="ex1" role="tablist">
+        <ul class="nav nav-tabs fixed-top mb-0 navbar" id="ex1" role="tablist">
             <li class="nav-item" role="presentation">
                 <a class="nav-link active tl" id="ex1-tab-1" data-mdb-toggle="tab" href="#ex1-tabs-1" role="tab"
                     aria-controls="ex1-tabs-1" aria-selected="true">
