--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
 </head>
 
 <body>
-    <canvas id="canvas"></canvas>
+
+    <div class="canvas-container">
+        <canvas id="canvas"></canvas>
+    </div>
+
     <div class="container ui">
         <!-- Tabs navs -->
-        <ul class="nav nav-tabs fixed-top mb-0 navbar" id="ex1" role="tablist">
+        <ul class="navbar nav nav-tabs nav-fill w-100 fixed-top" id="ex1" role="tablist">
             <li class="nav-item" role="presentation">
                 <a class="nav-link active tl" id="ex1-tab-1" data-mdb-toggle="tab" href="#ex1-tabs-1" role="tab"
                     aria-controls="ex1-tabs-1" aria-selected="true">
@@ -58,7 +62,8 @@
                         <img class="icon" src="icons/head-shape/forehead-width-max.svg">
                     </div>
                     <div class="range">
-                        <input class="bar" type="range" min="0" max="500" value="200" class="form-range" id="forehead-width-slider" />
+                        <input class="bar" type="range" min="0" max="500" value="200" class="form-range"
+                            id="forehead-width-slider" />
                     </div>
                 </div>
 
@@ -68,7 +73,8 @@
                         <img class="icon" src="icons/head-shape/cheeks-width-max.svg">
                     </div>
                     <div class="range">
-                        <input type="range" class="bar" min="0" max="500" value="500" class="form-range" id="cheeks-width-slider" />
+                        <input type="range" class="bar" min="0" max="500" value="500" class="form-range"
+                            id="cheeks-width-slider" />
                     </div>
                 </div>
 
@@ -78,15 +84,145 @@
                         <img class="icon" src="icons/head-shape/chin-height-max.svg">
                     </div>
                     <div class="range">
-                        <input type="range" class="bar" min="0" max="500" value="450" class="form-range" id="chin-height-slider" />
+                        <input type="range" class="bar" min="0" max="500" value="450" class="form-range"
+                            id="chin-height-slider" />
                     </div>
                 </div>
             </div>
+
             <div class="tab-pane fade" id="ex1-tabs-2" role="tabpanel" aria-labelledby="ex1-tab-2">
-                Tab 2 content
+                <!-- Pills navs -->
+                <ul class="nav nav-pills mb-3 " id="ex1" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link active" id="ex1-tab-1" data-mdb-toggle="pill" href="#ex1-pills-1" role="tab"
+                            aria-controls="ex1-pills-1" aria-selected="true">
+                            <img class="icon" src="icons/hairstyles/choose-hairstyle-menu.svg"></a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" id="ex1-tab-2" data-mdb-toggle="pill" href="#ex1-pills-2" role="tab"
+                            aria-controls="ex1-pills-2" aria-selected="false">
+                            <img class="icon" src="icons/hairstyles/choose-buns-menu.svg"></a></a>
+                    </li>
+                </ul>
+                <hr>
+                <!-- Pills navs -->
+                <!-- Pills content -->
+                <div class="tab-content for-pills" id="ex1-content">
+                    <div class="tab-pane fade show active" id="ex1-pills-1" role="tabpanel" aria-labelledby="ex1-tab-1">
+                        <div class="slider">
+                            <div class="container slider-label">
+                                <img class="icon" src="icons/hairstyles/hair-fullness-min.svg">
+                                <img class="icon" src="icons/hairstyles/hair-fullness-max.svg">
+                            </div>
+                            <div class="range">
+                                <input class="bar" type="range" min="0" max="50" value="15" class="form-range"
+                                    id="hair-fullness-slider" />
+                            </div>
+                        </div>
+
+                        <div class="slider">
+                            <div class="container slider-label">
+                                <img class="icon" src="icons/hairstyles/hair-length-min.svg">
+                                <img class="icon" src="icons/hairstyles/hair-length-max.svg">
+                            </div>
+                            <div class="range">
+                                <input class="bar" type="range" min="-50" max="50" value="15" class="form-range"
+                                    id="hair-length-slider" />
+                            </div>
+                        </div>
+
+                        <div class="slider">
+                            <div class="container slider-label">
+                                <img class="icon" src="icons/hairstyles/strand-thickness-min.svg">
+                                <img class="icon" src="icons/hairstyles/strand-thickness-max.svg">
+                            </div>
+                            <div class="range">
+                                <input class="bar" type="range" min="0" max="25" value="15" class="form-range"
+                                    id="hair-strand-slider" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="tab-pane fade" id="ex1-pills-2" role="tabpanel" aria-labelledby="ex1-tab-2">
+                        <div class="slider">
+                            <div class="container slider-label">
+                                <img class="icon" src="icons/hairstyles/bunsize-min.svg">
+                                <img class="icon" src="icons/hairstyles/bunsize-max.svg">
+                            </div>
+                            <div class="range">
+                                <input class="bar" type="range" min="0" max="20" value="10" class="form-range"
+                                    id="bun-size-slider" />
+                            </div>
+                        </div>
+
+                        <div class="slider">
+                            <div class="container slider-label">
+                                <img class="icon" src="icons/hairstyles/buns-xpos-min.svg">
+                                <img class="icon" src="icons/hairstyles/buns-xpos-max.svg">
+                            </div>
+                            <div class="range">
+                                <input class="bar" type="range" min="-200" max="200" value="10" class="form-range"
+                                    id="bun-spacing-slider" />
+                            </div>
+                        </div>
+
+                        <div class="slider">
+                            <div class="container slider-label">
+                                <img class="icon" src="icons/hairstyles/buns-ypos-min.svg">
+                                <img class="icon" src="icons/hairstyles/buns-ypos-max.svg">
+                            </div>
+                            <div class="range">
+                                <input class="bar" type="range" min="-250" max="250" value="50" class="form-range"
+                                    id="bun-ypos-slider" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Pills content -->
             </div>
+
             <div class="tab-pane fade" id="ex1-tabs-3" role="tabpanel" aria-labelledby="ex1-tab-3">
-                Tab 3 content
+                <!-- Pills navs -->
+                <ul class="nav nav-pills mb-3 facial-features nav-fill" id="ex1" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link active" id="ex1-tab-1" data-mdb-toggle="pill" href="#ex1-pills-1" role="tab"
+                            aria-controls="ex1-pills-1" aria-selected="true">
+                            <img class="icon" src="icons/hairstyles/choose-hairstyle-menu.svg">
+                        </a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" id="ex1-tab-2" data-mdb-toggle="pill" href="#ex1-pills-2" role="tab"
+                            aria-controls="ex1-pills-2" aria-selected="false">
+                            <img class="icon" src="icons/hairstyles/choose-hairstyle-menu.svg"></a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" id="ex1-tab-3" data-mdb-toggle="pill" href="#ex1-pills-3" role="tab"
+                            aria-controls="ex1-pills-3" aria-selected="false"><img class="icon"
+                                src="icons/hairstyles/choose-hairstyle-menu.svg"></a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" id="ex1-tab-4" data-mdb-toggle="pill" href="#ex1-pills-4" role="tab"
+                            aria-controls="ex1-pills-4" aria-selected="false"><img class="icon"
+                                src="icons/hairstyles/choose-hairstyle-menu.svg"></a>
+                    </li>
+                </ul>
+                <!-- Pills navs -->
+                <!-- Pills content -->
+                <div class="tab-content" id="ex1-content">
+                    <div class="tab-pane fade show active" id="ex1-pills-1" role="tabpanel" aria-labelledby="ex1-tab-1">
+                        Tab 1 content
+                    </div>
+                    <div class="tab-pane fade" id="ex1-pills-2" role="tabpanel" aria-labelledby="ex1-tab-2">
+                        Tab 2 content
+                    </div>
+                    <div class="tab-pane fade" id="ex1-pills-3" role="tabpanel" aria-labelledby="ex1-tab-3">
+                        Tab 3 content
+                    </div>
+                    <div class="tab-pane fade" id="ex1-pills-4" role="tabpanel" aria-labelledby="ex1-tab-4">
+                        Tab 4 content
+                    </div>
+                </div>
+                <!-- Pills content -->
             </div>
             <div class="tab-pane fade" id="ex1-tabs-4" role="tabpanel" aria-labelledby="ex1-tab-4">
                 Tab 4 content
@@ -97,8 +233,6 @@
 
     <script src="./canvas.js"></script>
     <script src="./ui.js"></script>
-
-
 </body>
 
 </html>
