--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>People of the World</title>
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="icon" type="image/png" href="/icons/favicon.svg" />
     <script src="./classes.js"></script>
 
     <!-- Font Awesome -->
