--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>People of the World</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./responsive-styling.css">
     <link rel="icon" type="image/png" href="/icons/favicon.svg" />
     <script src="./classes.js"></script>
 
@@ -45,17 +48,25 @@
                     aria-controls="ex1-tabs-3" aria-selected="false">
                     <img class="icon" src="icons/facial-features.svg"></a>
             </li>
-            <li class="nav-item" role="presentation">
-                <a class="nav-link tr" id="ex1-tab-4" data-mdb-toggle="tab" href="#ex1-tabs-4" role="tab"
-                    aria-controls="ex1-tabs-4" aria-selected="false">
-                    <img class="icon" src="icons/color-palette.svg"></a>
-            </li>
         </ul>
         <!-- Tabs navs -->
 
         <!-- Tabs content -->
         <div class="tab-content" id="ex1-content">
             <div class="tab-pane fade show active" id="ex1-tabs-1" role="tabpanel" aria-labelledby="ex1-tab-1">
+                <div class="color-palette-container">
+
+                        <div class="color-icon-with-label">
+                            <div class="col">
+                                <img class="icon" src="icons/color-palette.svg">
+                                <p>skin color</p>
+                            </div>
+                        </div>
+
+                        <div id="color-swatch-container" class="col">
+                        </div>
+                    </div>
+                </div>
 
                 <div class="slider">
                     <div class="container slider-label">
@@ -93,7 +104,7 @@
 
             <div class="tab-pane fade" id="ex1-tabs-2" role="tabpanel" aria-labelledby="ex1-tab-2">
                 <!-- Pills navs -->
-                <ul class="nav nav-pills mb-3 " id="ex1" role="tablist">
+                <ul class="nav center-pills nav-pills mb-3 " id="ex1" role="tablist">
                     <li class="nav-item" role="presentation">
                         <a class="nav-link active" id="ex1-tab-1" data-mdb-toggle="pill" href="#ex1-pills-1" role="tab"
                             aria-controls="ex1-pills-1" aria-selected="true">
@@ -138,7 +149,7 @@
                                 <img class="icon" src="icons/hairstyles/strand-thickness-max.svg">
                             </div>
                             <div class="range">
-                                <input class="bar" type="range" min="0" max="25" value="15" class="form-range"
+                                <input class="bar" type="range" min="1" max="15" value="5" class="form-range"
                                     id="hair-strand-slider" />
                             </div>
                         </div>
@@ -184,42 +195,133 @@
 
             <div class="tab-pane fade" id="ex1-tabs-3" role="tabpanel" aria-labelledby="ex1-tab-3">
                 <!-- Pills navs -->
-                <ul class="nav nav-pills mb-3 facial-features nav-fill" id="ex1" role="tablist">
+                <ul class="nav nav-pills center-pills mb-3 facial-features nav-fill" id="ex2" role="tablist">
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link active" id="ex1-tab-1" data-mdb-toggle="pill" href="#ex1-pills-1" role="tab"
-                            aria-controls="ex1-pills-1" aria-selected="true">
-                            <img class="icon" src="icons/hairstyles/choose-hairstyle-menu.svg">
+                        <a class="nav-link active" id="ex2-tab-1" data-mdb-toggle="pill" href="#ex2-pills-1" role="tab"
+                            aria-controls="ex2-pills-1" aria-selected="true">
+                            <img class="icon" src="icons/facial-features/eyes.svg">
                         </a>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link" id="ex1-tab-2" data-mdb-toggle="pill" href="#ex1-pills-2" role="tab"
-                            aria-controls="ex1-pills-2" aria-selected="false">
-                            <img class="icon" src="icons/hairstyles/choose-hairstyle-menu.svg"></a>
+                        <a class="nav-link" id="ex2-tab-2" data-mdb-toggle="pill" href="#ex2-pills-2" role="tab"
+                            aria-controls="ex2-pills-2" aria-selected="false">
+                            <img class="icon" src="icons/facial-features/nose.svg"></a>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link" id="ex1-tab-3" data-mdb-toggle="pill" href="#ex1-pills-3" role="tab"
-                            aria-controls="ex1-pills-3" aria-selected="false"><img class="icon"
-                                src="icons/hairstyles/choose-hairstyle-menu.svg"></a>
+                        <a class="nav-link" id="ex2-tab-3" data-mdb-toggle="pill" href="#ex2-pills-3" role="tab"
+                            aria-controls="ex2-pills-3" aria-selected="false"><img class="icon"
+                                src="icons/facial-features/mouth.svg"></a>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link" id="ex1-tab-4" data-mdb-toggle="pill" href="#ex1-pills-4" role="tab"
-                            aria-controls="ex1-pills-4" aria-selected="false"><img class="icon"
-                                src="icons/hairstyles/choose-hairstyle-menu.svg"></a>
+                        <a class="nav-link" id="ex2-tab-4" data-mdb-toggle="pill" href="#ex2-pills-4" role="tab"
+                            aria-controls="ex2-pills-4" aria-selected="false"><img class="icon"
+                                src="icons/facial-features/cheeks.svg"></a>
                     </li>
                 </ul>
                 <!-- Pills navs -->
                 <!-- Pills content -->
-                <div class="tab-content" id="ex1-content">
-                    <div class="tab-pane fade show active" id="ex1-pills-1" role="tabpanel" aria-labelledby="ex1-tab-1">
-                        Tab 1 content
+                <hr>
+                <div class="tab-content for-pills" id="ex2-content">
+                    <div class="tab-pane fade show active" id="ex2-pills-1" role="tabpanel" aria-labelledby="ex2-tab-1">
+                        <div class="slider">
+                            <div class="container slider-label">
+                                <img class="icon" src="icons/facial-features/eyes/eye-spacing-min.svg">
+                                <img class="icon" src="icons/facial-features/eyes/eye-spacing-max.svg">
+                            </div>
+                            <div class="range">
+                                <input class="bar" type="range" min="0" max="250" value="50" class="form-range"
+                                    id="eye-spacing-slider" />
+                            </div>
+                        </div>
+
+                        <div class="slider">
+                            <div class="container slider-label">
+                                <img class="icon" src="icons/facial-features/eyes/eye-ypos-min.svg">
+                                <img class="icon" src="icons/facial-features/eyes/eye-ypos-max.svg">
+                            </div>
+                            <div class="range">
+                                <input class="bar" type="range" min="-250" max="250" value="50" class="form-range"
+                                    id="eye-ypos-slider" />
+                            </div>
+                        </div>
+
+                        <div class="slider one-row">
+                            <div class="container slider-label">
+                                <img class="icon" src="icons/facial-features/eyes/eye-width.svg">
+                            </div>
+                            <div class="range">
+                                <input class="bar" type="range" min="0" max="150" value="50" class="form-range"
+                                    id="eye-width-slider" />
+                            </div>
+                        </div>
+
+                        <div class="slider one-row">
+                            <div class="container slider-label">
+                                <img class="icon" src="icons/facial-features/eyes/eye-height.svg">
+                            </div>
+                            <div class="range">
+                                <input class="bar" type="range" min="0" max="150" value="50" class="form-range"
+                                    id="eye-height-slider" />
+                            </div>
+                        </div>
+
+                        <div class="slider">
+                            <div class="container slider-label">
+                                <img class="icon" src="">
+                            </div>
+                            <div class="range">
+                                <input class="bar" type="range" min="0" max="150" value="50" class="form-range"
+                                    id="pupil-size-slider" />
+                            </div>
+                        </div>
                     </div>
-                    <div class="tab-pane fade" id="ex1-pills-2" role="tabpanel" aria-labelledby="ex1-tab-2">
-                        Tab 2 content
+
+                    <div class="tab-pane fade" id="ex2-pills-2" role="tabpanel" aria-labelledby="ex2-tab-2">
+                        <div class="slider">
+                            <div class="container slider-label">
+                                <img class="icon" src="">
+                            </div>
+                            <div class="range">
+                                <input class="bar" type="range" min="-200" max="200" value="50" class="form-range"
+                                    id="nose-width-slider" />
+                            </div>
+                        </div>
+
+                        <div class="slider">
+                            <div class="container slider-label">
+                                <img class="icon" src="">
+                            </div>
+                            <div class="range">
+                                <input class="bar" type="range" min="-500" max="500" value="50" class="form-range"
+                                    id="nose-length-slider" />
+                            </div>
+                        </div>
+
+                        <div class="slider">
+                            <div class="container slider-label">
+                                <img class="icon" src="">
+                            </div>
+                            <div class="range">
+                                <input class="bar" type="range" min="0" max="150" value="50" class="form-range"
+                                    id="nose-base-width-slider" />
+                            </div>
+                        </div>
+
+                        <div class="slider">
+                            <div class="container slider-label">
+                                <img class="icon" src="">
+                            </div>
+                            <div class="range">
+                                <input class="bar" type="range" min="-200" max="200" value="50" class="form-range"
+                                    id="nose-base-ypos-slider" />
+                            </div>
+                        </div>
                     </div>
-                    <div class="tab-pane fade" id="ex1-pills-3" role="tabpanel" aria-labelledby="ex1-tab-3">
+
+                    <div class="tab-pane fade" id="ex2-pills-3" role="tabpanel" aria-labelledby="ex2-tab-3">
                         Tab 3 content
                     </div>
-                    <div class="tab-pane fade" id="ex1-pills-4" role="tabpanel" aria-labelledby="ex1-tab-4">
+                    <div class="tab-pane fade" id="ex2-pills-4" role="tabpanel" aria-labelledby="ex2-tab-4">
                         Tab 4 content
                     </div>
                 </div>
