--- a/index.html
+++ b/index.html
@@ -54,52 +54,76 @@
         <!-- Tabs content -->
         <div class="tab-content" id="ex1-content">
             <div class="tab-pane fade show active" id="ex1-tabs-1" role="tabpanel" aria-labelledby="ex1-tab-1">
-                <div class="color-palette-container">
 
-                        <div class="color-icon-with-label">
-                            <div class="col">
-                                <img class="icon" src="icons/color-palette.svg">
-                                <p>skin color</p>
+                <!-- Pills navs -->
+                <ul class="nav nav-pills for-pills mb-3" id="ex3" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link active" id="ex1-tab-1" data-mdb-toggle="pill" href="#ex3-pills-1" role="tab"
+                            aria-controls="ex3-pills-1" aria-selected="true">
+                            <img class="icon" src="icons/head-shape.svg"></a></a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" id="ex3-tab-2" data-mdb-toggle="pill" href="#ex3-pills-2" role="tab"
+                            aria-controls="ex1-pills-2" aria-selected="false">
+                            <img class="icon" src="icons/facial-features/cheeks.svg"></a></a></a>
+                    </li>
+                </ul>
+                <!-- Pills navs -->
+                <!-- Pills content -->
+
+                <hr>
+                <div class="tab-content" id="ex3-content">
+                    <div class="tab-pane fade show active" id="ex3-pills-1" role="tabpanel" aria-labelledby="ex3-tab-1">
+                        <div class="color-palette-container">
+                            <div class="color-icon-with-label">
+                                <div>
+                                    <img class="icon" src="icons/color-palette.svg">
+                                    <p>skin color</p>
+                                </div>
+                            </div>
+
+                            <div id="color-swatch-container">
                             </div>
                         </div>
 
-                        <div id="color-swatch-container" class="col">
+                        <div class="slider">
+                            <div class="container slider-label">
+                                <img class="icon" src="icons/head-shape/forehead-width-min.svg">
+                                <img class="icon" src="icons/head-shape/forehead-width-max.svg">
+                            </div>
+                            <div class="range">
+                                <input class="bar" type="range" min="0" max="500" value="200" class="form-range"
+                                    id="forehead-width-slider" />
+                            </div>
+                        </div>
+
+                        <div class="slider">
+                            <div class="container slider-label">
+                                <img class="icon" src="icons/head-shape/cheeks-width-min.svg">
+                                <img class="icon" src="icons/head-shape/cheeks-width-max.svg">
+                            </div>
+                            <div class="range">
+                                <input type="range" class="bar" min="0" max="500" value="500" class="form-range"
+                                    id="cheeks-width-slider" />
+                            </div>
+                        </div>
+
+                        <div class="slider">
+                            <div class="container slider-label">
+                                <img class="icon" src="icons/head-shape/chin-height-min.svg">
+                                <img class="icon" src="icons/head-shape/chin-height-max.svg">
+                            </div>
+                            <div class="range">
+                                <input type="range" class="bar" min="0" max="500" value="450" class="form-range"
+                                    id="chin-height-slider" />
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="slider">
-                    <div class="container slider-label">
-                        <img class="icon" src="icons/head-shape/forehead-width-min.svg">
-                        <img class="icon" src="icons/head-shape/forehead-width-max.svg">
-                    </div>
-                    <div class="range">
-                        <input class="bar" type="range" min="0" max="500" value="200" class="form-range"
-                            id="forehead-width-slider" />
+                    <div class="tab-pane fade" id="ex3-pills-2" role="tabpanel" aria-labelledby="ex3-tab-2">
+                        Tab 2 content
                     </div>
                 </div>
-
-                <div class="slider">
-                    <div class="container slider-label">
-                        <img class="icon" src="icons/head-shape/cheeks-width-min.svg">
-                        <img class="icon" src="icons/head-shape/cheeks-width-max.svg">
-                    </div>
-                    <div class="range">
-                        <input type="range" class="bar" min="0" max="500" value="500" class="form-range"
-                            id="cheeks-width-slider" />
-                    </div>
-                </div>
-
-                <div class="slider">
-                    <div class="container slider-label">
-                        <img class="icon" src="icons/head-shape/chin-height-min.svg">
-                        <img class="icon" src="icons/head-shape/chin-height-max.svg">
-                    </div>
-                    <div class="range">
-                        <input type="range" class="bar" min="0" max="500" value="450" class="form-range"
-                            id="chin-height-slider" />
-                    </div>
-                </div>
+                <!-- Pills content -->
             </div>
 
             <div class="tab-pane fade" id="ex1-tabs-2" role="tabpanel" aria-labelledby="ex1-tab-2">
@@ -212,11 +236,6 @@
                             aria-controls="ex2-pills-3" aria-selected="false"><img class="icon"
                                 src="icons/facial-features/mouth.svg"></a>
                     </li>
-                    <li class="nav-item" role="presentation">
-                        <a class="nav-link" id="ex2-tab-4" data-mdb-toggle="pill" href="#ex2-pills-4" role="tab"
-                            aria-controls="ex2-pills-4" aria-selected="false"><img class="icon"
-                                src="icons/facial-features/cheeks.svg"></a>
-                    </li>
                 </ul>
                 <!-- Pills navs -->
                 <!-- Pills content -->
@@ -302,7 +321,7 @@
                                 <img class="icon" src="">
                             </div>
                             <div class="range">
-                                <input class="bar" type="range" min="0" max="150" value="50" class="form-range"
+                                <input class="bar" type="range" min="-150" max="150" value="50" class="form-range"
                                     id="nose-base-width-slider" />
                             </div>
                         </div>
@@ -333,6 +352,7 @@
         </div>
         <!-- Tabs content -->
     </div>
+
 
     <script src="./canvas.js"></script>
     <script src="./ui.js"></script>
