--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./responsive-styling.css">
-    <link rel="icon" type="image/png" href="/icons/favicon.svg" />
+    <link rel="icon" type="image/png" href="icons/favicon.svg" />
     <script src="./classes.js"></script>
 
     <!-- Font Awesome -->
@@ -203,7 +203,7 @@
                                 <input type="radio" class="btn-check" name="options" id="bouba-hair-selector"
                                     autocomplete="off" checked />
                                 <label class="btn btn-secondary" for="bouba-hair-selector">
-                                    <div><img class="icon hair" src="/icons/bouba-hair-icon.svg">
+                                    <div><img class="icon hair" src="icons/bouba-hair-icon.svg">
                                         <p>bouba Hairstyle</p>
                                     </div>
                                 </label>
@@ -211,7 +211,7 @@
                                 <input type="radio" class="btn-check" name="options" id="kiki-hair-selector"
                                     autocomplete="off" />
                                 <label class="btn btn-secondary" for="kiki-hair-selector">
-                                    <div><img class="icon hair" src="/icons/kiki-hair-icon.svg">
+                                    <div><img class="icon hair" src="icons/kiki-hair-icon.svg">
                                         <p>Kiki Hairstyle</p>
                                     </div>
                                 </label>
